# sdocx

./: .gitattributes  .gitignore  .release-please-manifest.json  Dockerfile  README.md  pyproject.toml  release-please-config.json
.config/: nextest.toml
.github/: targets.json
.github/workflows/: release.yml  rust.yml
crates/sdocx/: CHANGELOG.md  Cargo.toml
crates/sdocx-cli/: CHANGELOG.md  Cargo.toml
crates/sdocx-cli/src/: main.rs
crates/sdocx-wasm/: CHANGELOG.md  Cargo.toml
crates/sdocx-wasm/src/: lib.rs
crates/sdocx/src/: container.rs  decode.rs  error.rs  lib.rs  page.rs  types.rs
notebooks/: 01_container.ipynb  02_strokes.ipynb  03_ink.ipynb
samples/: cs61bl_su22.sdocx  handwritten.sdocx  quiz.sdocx
