[package]
name = "sdocx-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Reverse-engineered tooling and SDK for converting Samsung Notes (.sdocx) files"
license = "GPL-3.0"
repository = "https://github.com/twangodev/sdocx"

[dependencies]
sdocx = { version = "0.1.0", path = "../sdocx" }
clap = { version = "4.5.60", features = ["derive"] }