[package]
name = "sdocx-wasm"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "WASM bindings for sdocx — parse Samsung Notes (.sdocx) files in the browser"
license = "GPL-3.0"
repository = "https://github.com/twangodev/sdocx"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdocx = { version = "0.3.0", path = "../sdocx", features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"